# outcast-api

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DOCUMENTATION.md  INTERNGUIDE.md  README.md  docker-compose.yaml
.github/workflows/: delete-merged-branches.yml  rust.yml
migrations/2026-04-12-120305-0000_create_user/: down.sql  up.sql
migrations/2026-04-14-134310-0001_create_profiles_social_handles_rates/: down.sql  up.sql
migrations/2026-04-15-080000-0002_create_sessions/: down.sql  up.sql
migrations/2026-04-17-094911-0003_create_oauth_tokens/: down.sql  up.sql
migrations/2026-04-17-101500-0004_add_social_handles_engagement_sync_metadata/: down.sql  up.sql
migrations/2026-04-18-100700-0005_drop_rates_type_check/: down.sql  up.sql
migrations/2026-04-18-123800-0006_add_avatar_url_to_users/: up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/instagram/: client.rs  error.rs  http.rs  mod.rs  repository.rs  service.rs  state.rs
src/profile/repository/: profile_repository.rs
src/profile/usecase/: profile_service.rs
src/session/: mod.rs
src/session/http/: cookies.rs  mod.rs  session_controller.rs
src/session/repository/: session_repository.rs
src/session/usecase/: session_service.rs
src/tiktok/: client.rs  error.rs
src/user/: mod.rs
src/user/crypto/: hash_password.rs  jwt.rs  mod.rs
src/user/http/: auth_extractor.rs  mod.rs  profile_controller.rs  user_controller.rs
src/user/repository/: mod.rs  profile_repository.rs  up.sql  user_repository.rs
src/user/storage/: mod.rs  s3_adapter.rs
src/user/usecase/: mod.rs  profile_service.rs  user_service.rs
tests/: avatar_upload.rs  instagram_oauth.rs  instagram_refresh.rs
tests/common/: mod.rs
