[package]
name = "outcast-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-macros = "0.5.0"
async-trait = "0.1.86"
config = "0.15.22"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
deadpool-postgres = {version="0.14.1", features=["serde"]}
diesel = { version = "2.3.7", features = ["postgres", "uuid"] }
dotenvy = "0.15.7"
serde = {version="1.0.228", features=["derive"]}
thiserror = "2.0.18"
tokio = {version="1.51.1",features=["full"]}
tokio-postgres = {version="0.7.17",features = ["with-uuid-1"]}
uuid = {version="1.23.0", features=["serde", "v4"]}

[dev-dependencies]
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
mockall = "0.14.0"
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
