[package]
name = "outcast-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
axum-macros = "0.5.0"
bcrypt = "0.17.0"
config = "0.15.22"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
deadpool-postgres = {version="0.14.1", features=["serde"]}
bigdecimal = "0.4.8"
diesel = { version = "2.3.7", features = ["postgres", "uuid", "chrono", "numeric"] }
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
sha2 = "0.10.8"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
serde = {version="1.0.228", features=["derive"]}
thiserror = "2.0.18"
tokio = {version="1.51.1",features=["full"]}
tokio-postgres = {version="0.7.17",features = ["with-uuid-1"]}
uuid = {version="1.23.0", features=["serde", "v4"]}
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
http-body-util = "0.1"
mockall = "0.14.0"
serde_json = "1.0"
testcontainers = "0.27.2"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
